unix环境高级编程笔记1图片修改

--- a/_posts/2019-10-28-Unix环境高级编程笔记.md
+++ b/_posts/2019-10-28-Unix环境高级编程笔记.md
@@ -16,7 +16,7 @@ title: Unix环境高级编程笔记-1
 
 int open(const char *path, int oflag, ... /* mode_t mode */);
 int openat(int fd, const char* path, int oflag, ... /* mode_t mode */);
-两函数返回值：若成功，返回文件描述符；若出错，返回-1。
+/* 两函数返回值：若成功，返回文件描述符；若出错，返回-1。 */
 ```
 
 ​        我们将最后一个参数为..., ISO C 用这种方法表明余下的参数的数量及其类型是可变的，对于`open`函数而言，仅当创建新文件时才使用最后这个参数。在函数原型中将此参数防止在注释中。  
@@ -69,7 +69,7 @@ int openat(int fd, const char* path, int oflag, ... /* mode_t mode */);
 #include <fcntl.h>
 
 int creat(const char *path, mode_t mode);
-返回值：若成功，返回只写打开的文件描述符；若出错，返回-1.
+/* 返回值：若成功，返回只写打开的文件描述符；若出错，返回-1. */
 ```
 
 此函数等效于：
@@ -84,7 +84,7 @@ int creat(const char *path, mode_t mode);
 #include <unistd.h>
 
 int close(int fd);
-返回值：若成功，返回0；若出错，返回-1.
+/* 返回值：若成功，返回0；若出错，返回-1. */
 ```
 
 关闭一个文件是还会释放该进程加载该文件上的所有记录锁。  
@@ -99,7 +99,7 @@ int close(int fd);
 #include <unistd.h>
 
 off_t lseek(int fd, off_t offset, int whence);
-返回值：若成功，返回新的文件偏移量；若失败，返回为-1.
+/* 返回值：若成功，返回新的文件偏移量；若失败，返回为-1. */
 ```
 
 对参数`offset`的解释与参数`whence`有关.
@@ -131,7 +131,7 @@ ssize_t read(int fd, void *buf, size_t nbytes);
 #include <unistd.h>
 
 ssize_t write(int fd, const void *buf, size_t nbytes);
-返回值：若成功返回已写字节数；若出错，返回-1
+/* 返回值：若成功返回已写字节数；若出错，返回-1 */
 ```
 
 
@@ -158,9 +158,9 @@ if (write(fd, buf, 100) != 100)
 #include <unistd.h>
 
 ssize_t pread(int fd, void* buf, size_t nbytes, off_t offset);
-返回值：读到的字节数，若已到文件尾，返回0；若出错，返回-1.
+/* 返回值：读到的字节数，若已到文件尾，返回0；若出错，返回-1. */
 ssize_t pwrite(int fd, const void *buf, size_t nbytes, off_t offset);
-返回值：若成功，返回独到的字节数；若出错，返回-1.
+/* 返回值：若成功，返回独到的字节数；若出错，返回-1. */
 ```
 
 ​    调用`pread`相当于调用`lseek`后调用`read`，但是`pread`又与这种顺序调用有下列重要区别。
@@ -196,7 +196,7 @@ if ((fd = open(pathname, O_WRONLY)) < 0)
 
 int dup(int fd);
 int dup2(int fd, int fd2);
-两函数返回值：若成功，返回新的文件描述符；若出错，返回-1.
+/* 两函数返回值：若成功，返回新的文件描述符；若出错，返回-1. */
 ```
 
 由`dup`返回的新文件描述符一定是当前可用文件描述符的最小值。  
@@ -212,7 +212,7 @@ int dup2(int fd, int fd2);
 
 int fsync(int fd);
 int fdatasync(int fd);
-返回值：若成功，返回0；若出错，返回-1.
+/* 返回值：若成功，返回0；若出错，返回-1. */
 void sync(void);
 ```
 
@@ -230,7 +230,7 @@ void sync(void);
 #include <fcntl.h>
 
 int fcntl(int fd, int cmd, ... /* int arg */);
-返回值：若成功，则依赖于cmd, 若出错，返回-1.
+/* 返回值：若成功，则依赖于cmd, 若出错，返回-1. */
 ```
 
 `fcntl`函数共有以下5中功能。
@@ -241,9 +241,9 @@ int fcntl(int fd, int cmd, ... /* int arg */);
 4. 获取/设置异步I/O所有权（`cmd` = F_GETOWN或F_SETOWN）。
 5. 获取/设置记录锁(`cmd` = F_GETLK、F_SETLK或F_SETLKW)。
 
-![alt fcntl说明](..\images\unix_programing\fcnlt1.jpg)
+![alt fcntl说明](https://gitee.com/liuyun000/XDU/blob/master/others/images/unix_programing/fcnlt1.jpg)
 
-![alt fcntl说明](..\images\unix_programing\fcntl2.jpg)
+![alt fcntl说明](https://gitee.com/liuyun000/XDU/blob/master/others/images/unix_programing/fcntl2.jpg)
 
 
 
@@ -255,6 +255,6 @@ int fcntl(int fd, int cmd, ... /* int arg */);
 #include <sys/ioctl.h> /*BSD and Linux*/
 
 int ioctl(int fd, int request, ...);
-返回值：出错返回-1，否则其他值。
+/* 返回值：出错返回-1，否则其他值。 */
 ```
 
