继续修改Unix环境高级编程笔记1 标题去掉行中代码符号

--- a/_posts/2019-10-28-Unix环境高级编程笔记1.md
+++ b/_posts/2019-10-28-Unix环境高级编程笔记1.md
@@ -9,7 +9,7 @@ title: Unix环境高级编程笔记-1
 
 最近开始读Unix环境高级编程，第一、二章就先不记了，从第三章开始。
 
-### 函数`open`和`openat`
+### 函数open和openat
 
 ```c
 #include <fcntl.h>
@@ -63,7 +63,7 @@ int openat(int fd, const char* path, int oflag, ... /* mode_t mode */);
 
   
 
-### 函数`creat`
+### 函数creat
 
 ```c
 #include <fcntl.h>
@@ -78,7 +78,7 @@ int creat(const char *path, mode_t mode);
 
   
 
-### 函数`close`
+### 函数close
 
 ```c
 #include <unistd.h>
@@ -93,7 +93,7 @@ int close(int fd);
 
   
 
-### 函数`lseek`
+### 函数lseek
 
 ```c
 #include <unistd.h>
@@ -114,18 +114,18 @@ off_t lseek(int fd, off_t offset, int whence);
 
   
 
-### 函数`read`
+### 函数read
 
 ```c
 #include <unistd.h>
 
 ssize_t read(int fd, void *buf, size_t nbytes);
-返回值：读到的字节数，若以到文件尾，返回0，若出错，返回-1.
+/* 返回值：读到的字节数，若以到文件尾，返回0，若出错，返回-1. */
 ```
 
 
 
-### 函数`write`
+### 函数write
 
 ```c
 #include <unistd.h>
@@ -152,7 +152,7 @@ if (write(fd, buf, 100) != 100)
 
 ​       若两个`if`之间发生了进程切换且另一个进程对文件进行了添加，则此操作会将原来的字符覆盖。  
 
-#### 2. 函数`pread`和`pwrite`
+#### 2. 函数pread和pwrite
 
 ```c
 #include <unistd.h>
@@ -187,7 +187,7 @@ if ((fd = open(pathname, O_WRONLY)) < 0)
 
   
 
-### 函数`dup`和`dup2`
+### 函数dup和dup2
 
 下面两个函数都可以用来复制一个现有的文件描述符。  
 
@@ -205,7 +205,7 @@ int dup2(int fd, int fd2);
 
   
 
-### 函数`sync`、`fsync`和`fdatasync`
+### 函数sync、fsync和fdatasync
 
 ```c
 #include <unistd.h>
@@ -224,7 +224,7 @@ void sync(void);
 
   
 
-### 函数`fcntl`
+### 函数fcntl
 
 ```c
 #include <fcntl.h>
@@ -247,7 +247,7 @@ int fcntl(int fd, int cmd, ... /* int arg */);
 
 
 
-### 函数`ioctl`
+### 函数ioctl
 
 ```c
 #include <unistd.h> /* System V */
