--- a/_posts/2019-10-28-Unix环境高级编程笔记1.md
+++ b/_posts/2019-10-28-Unix环境高级编程笔记1.md
@@ -241,9 +241,9 @@ int fcntl(int fd, int cmd, ... /* int arg */);
 4. 获取/设置异步I/O所有权（`cmd` = F_GETOWN或F_SETOWN）。
 5. 获取/设置记录锁(`cmd` = F_GETLK、F_SETLK或F_SETLKW)。
 
-![alt fcntl说明](https://gitee.com/liuyun000/XDU/blob/master/others/images/unix_programing/fcnlt1.jpg)
+![fcntl1][image1]
 
-![alt fcntl说明](https://gitee.com/liuyun000/XDU/blob/master/others/images/unix_programing/fcntl2.jpg)
+![fcntl2][image2]
 
 
 
@@ -257,4 +257,9 @@ int fcntl(int fd, int cmd, ... /* int arg */);
 int ioctl(int fd, int request, ...);
 /* 返回值：出错返回-1，否则其他值。 */
 ```
+
+
+
+[image1]: <https://mzgmzg.github.io/images/unix_programing/fcnlt1.jpghttps://mzgmzg.github.io/images/unix_programing/fcnlt1.jpg>
+[image2]: <https://mzgmzg.github.io/images/unix_programing/fcnlt1.jpghttps://mzgmzg.github.io/images/unix_programing/fcnlt2.jpg
 
