--- a/_posts/2019-10-28-Unix环境高级编程笔记1.md
+++ b/_posts/2019-10-28-Unix环境高级编程笔记1.md
@@ -260,6 +260,6 @@ int ioctl(int fd, int request, ...);
 
 
 
-[image1]: <https://mzgmzg.github.io/images/unix_programing/fcnlt1.jpghttps://mzgmzg.github.io/images/unix_programing/fcnlt1.jpg>
-[image2]: <https://mzgmzg.github.io/images/unix_programing/fcnlt1.jpghttps://mzgmzg.github.io/images/unix_programing/fcnlt2.jpg
+[image1]: https://mzgmzg.github.io/images/unix_programing/fcnlt1.jpg
+[image2]: https://mzgmzg.github.io/images/unix_programing/fcnlt1.jpg
 
